Project

General

Profile

Actions

Bug #19379

closed

bluestore: crc mismatch after recent overwrite

Added by Sage Weil about 7 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
BlueStore
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2017-03-24 17:35:20.947261 7fdf5f5d5700 20 bluestore(/var/lib/ceph/osd/ceph-5) _do_alloc_write blob Blob(0x55e4392215d0 blob([0xf7000000~10000] mutable none/0x1) use_tracker(0x0 0x0) SharedBlob(0x55e439221800 sbid 0x0)) csum_type crc32c csum_order 12 csum_length 0x10000
2017-03-24 17:35:20.947267 7fdf5f5d5700 20 bluestore.blob(0x55e4392215d0) get_ref 0x0~1201 Blob(0x55e4392215d0 blob([0xf7000000~10000] mutable+csum+has_unused crc32c/0x1000 unused=0xfffc) use_tracker(0x0 0x0) SharedBlob(0x55e439221800 sbid 0x0))
...
2017-03-24 17:35:20.956264 7fdf5f5d5700 30 bluestore(/var/lib/ceph/osd/ceph-5) _dump_extent_map  0x160000~1201: 0x0~1201 Blob(0x55e4392215d0 blob([0xf7000000~10000] mutable+csum+has_unused crc32c/0x1000 unused=0xfffc) use_tracker(0x10000 0x1201) SharedBlob(0x55e439221800 sbid 0x0))
2017-03-24 17:35:20.956268 7fdf5f5d5700 30 bluestore(/var/lib/ceph/osd/ceph-5) _dump_extent_map      csum: [f0445f56,12978098,0,0,0,0,0,0,0,0,0,0,0,0,0,0]
2017-03-24 17:35:20.956271 7fdf5f5d5700 30 bluestore(/var/lib/ceph/osd/ceph-5) _dump_extent_map       0x0~2000 buffer(0x55e434ebfea0 space 0x55e439221818 0x0~2000 writing nocache)
...
on a different txc,
2017-03-24 17:35:23.750060 7fdf615d9700 20 bluestore(/var/lib/ceph/osd/ceph-5) _wctx_finish  blob release [0xf7000000~10000]
2017-03-24 17:35:23.750061 7fdf615d9700 20 bluestore.blob(0x55e4392215d0) discard_unallocated 0x0~10000
2017-03-24 17:35:23.750062 7fdf615d9700 20 bluestore.BufferSpace(0x55e439221818 in 0x55e42fcbff80) _discard 0x0~10000
2017-03-24 17:35:23.750064 7fdf615d9700 20 bluestore(/var/lib/ceph/osd/ceph-5) _wctx_finish  release 0xf7000000~10000
...
2017-03-24 17:35:23.757640 7fdf6adec700 20 bluestore(/var/lib/ceph/osd/ceph-5) _osr_reap_done  txc 0x55e436dccd00 done
...
but meanwhile,
2017-03-24 17:35:23.765298 7fdf6adec700 20 bluestore(/var/lib/ceph/osd/ceph-5) _osr_reap_done  txc 0x55e433295300 deferred_queued

original osr was 0x55e435d92140, but the release was on osr 0x55e435c235c0.. because there was a split.

fix is to flush deferred writes on split, or split deferred writes to new sequencer. not sure the latter is feasible.

Actions #1

Updated by Sage Weil about 7 years ago

  • Status changed from New to Resolved
Actions #2

Updated by Greg Farnum almost 7 years ago

  • Project changed from Ceph to RADOS
  • Category deleted (107)
Actions #3

Updated by Greg Farnum almost 7 years ago

  • Component(RADOS) BlueStore added
Actions

Also available in: Atom PDF